--- a/style.css
+++ b/style.css
@@ -63,5 +63,10 @@ header {
   }
 
   footer a {
-      color: #024e76
+      color: #024e76;
+  }
+
+  section {
+      padding: 60px;
+      background-image: url("../images/hero-bg.jpeg");
   }
