--- a/style.css
+++ b/style.css
@@ -13,13 +13,15 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content:space-between;
+    flex-wrap:wrap;
   }
   header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
   }
   
   header a {
@@ -28,7 +30,6 @@ header {
   }
 
   header nav {
-      float: right;
       margin: 7px 0;
   }
 
@@ -260,16 +261,4 @@ header {
 .contact-info h3 {
     color:#fce138;
     font-size: 32px;
-}
-
-.contact-info p,
-.contact-info address {
-  margin: 20px 0;
-  line-height: 1.5;
-  font-size: 20px;
-  font-style: normal;
-}
-
-.contact-info a {
-  color: #fce138;
 }
