--- a/style.css
+++ b/style.css
@@ -33,8 +33,12 @@ header {
       margin: 7px 0;
   }
 
-  header nav ul li {
-      display: inline;
+  header nav ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      list-style: none;
   }
 
   header nav ul li a {
@@ -262,3 +266,26 @@ header {
     color:#fce138;
     font-size: 32px;
 }
+
+.contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+  }
+  
+  .contact-info a {
+    color: #fce138;
+  }
+  
+  
+  /* REACH OUT STYLES END */
+  
+  /* UTILITIES */
+  .text-left {
+    text-align: left;
+  }
+  
+  .text-right {
+    text-align: right;
+  }
