--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
   }
 
   header nav ul li a {
-      margin: 0 30px;
+      padding: 10px 15px;
       font-weight: lighter;
       font-size: 1.55vw;
   }
@@ -83,6 +83,7 @@ header {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
   }
 
   .hero-form {
@@ -100,7 +101,7 @@ header {
       margin: 3.5%;
       color: #fff;
       font-size: 18px;
-      line-height: 1.3;
+      line-height: 1.2;
   }
 
   .hero-cta h2 {
@@ -154,7 +155,7 @@ header {
   }
 
   .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -351,4 +352,22 @@ justify-content: space-around;
 
   .flex-row {
       display: flex;
+  }
+
+  @media screen and (max-width: 980px) {
+      header h1 a {
+          color: tomato;
+      }
+  }
+
+  @media screen and (max-width: 768px) {
+      header h1 {
+          font-size: 80px;
+      }
+  }
+
+  @media screen and (max-width: 575px) {
+      header h1 {
+          font-size: 100px
+      }
   }
